fixed htaccess for 3C and news.js so it works again

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,11 @@ Redirect /vpr/threecavalier /vpr/3Cavaliers
 Redirect /vpr/threecavaliers /vpr/3Cavaliers
 Redirect /vpr/threeCavalier /vpr/3Cavaliers
 Redirect /vpr/threeCavaliers /vpr/3Cavaliers
+Redirect /vpr/3c /vpr/3Cavaliers
+Redirect /vpr/ThreeCavaliers /vpr/3Cavaliers
+Redirect /vpr/Threecavaliers /vpr/3Cavaliers
+Redirect /vpr/threeCavaliers /vpr/3Cavaliers
+Redirect /vpr/threecavaliets /vpr/3Cavaliers
 Redirect /vpr/baygame /vpr/sustain/BayGame
 Redirect /vpr/baygame.html /vpr/sustain/BayGame
 
